<resources>
    <string name="app_name">HaHa</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="home">Home Page</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="others">Others</string>

    <string name="load_success">Load successfully.</string>
    <string name="load_failed">Load unsuccessfully!</string>
    <string name="share">Share</string>
    <string name="more">More</string>
    <string name="reload">Reload</string>
    <string name="complete">Save complete</string>

    <string name="brain_riddles">Brain riddles</string>
    <string name="jokes">Jokes</string>
    <string name="horoscope">Horoscope</string>
    <string name="publish_time">Publish Time:</string>
    <string name="favorite_capital">FAVORITE</string>
    <string name="unfavorite_capital">UNFAVORITE</string>
    <string name="share_capital">SHARE</string>

    <string name="overall">Overall</string>
    <string name="work">Work</string>
    <string name="love">Love</string>
    <string name="health">Health</string>
    <string name="money">Money</string>
    <string name="author">Author</string>
    <string name="job">Job</string>

    <string name="unfavorite_confirm">Unfavorite this item?</string>
</resources>
