<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_brain_riddles"
            android:icon="@drawable/ic_menu_brain_riddle"
            android:title="@string/brain_riddles" />
        <item
            android:id="@+id/nav_jokes"
            android:icon="@drawable/ic_menu_jokes"
            android:title="@string/jokes" />
        <item
            android:id="@+id/nav_horoscope"
            android:icon="@drawable/ic_menu_horoscope"
            android:title="@string/horoscope" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
