<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/horoscope_details_item_content_bg"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/table_row_element"
                android:background="@color/material_red"
                android:textColor="@color/white"
                android:text="@string/overall"/>

            <TextView
                style="@style/table_row_element"
                android:background="@color/material_purple"
                android:textColor="@color/white"
                android:text="@string/work"/>

            <TextView
                style="@style/table_row_element"
                android:background="@color/material_blue"
                android:textColor="@color/white"
                android:text="@string/love"/>

            <TextView
                style="@style/table_row_element"
                android:background="@color/material_light_green"
                android:textColor="@color/white"
                android:text="@string/health"/>

            <TextView
                style="@style/table_row_element"
                android:background="@color/material_deep_orange"
                android:textColor="@color/white"
                android:text="@string/money"/>
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/table_row_element"
                android:id="@+id/today_overall"
                android:text="60%"/>

            <TextView
                style="@style/table_row_element"
                android:id="@+id/today_work"
                android:text="60%"/>

            <TextView
                style="@style/table_row_element"
                android:id="@+id/today_love"
                android:text="60%"/>

            <TextView
                style="@style/table_row_element"
                android:id="@+id/today_health"
                android:text="81%"/>

            <TextView
                style="@style/table_row_element"
                android:id="@+id/today_money"
                android:text="40%"/>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/table_row_element"
                android:background="@color/material_light_blue"
                android:textColor="@color/white"
                android:text="幸运颜色"/>

            <TextView
                style="@style/table_row_element"
                android:background="@color/material_amber"
                android:textColor="@color/white"
                android:text="幸运数字"/>

            <TextView
                style="@style/table_row_element"
                android:background="@color/material_brown"
                android:textColor="@color/white"
                android:text="速配星座"/>

        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/table_row_element"
                android:id="@+id/today_lucky_color"
                android:text="红色"/>

            <TextView
                style="@style/table_row_element"
                android:id="@+id/today_lucky_number"
                android:text="2"/>

            <TextView
                style="@style/table_row_element"
                android:id="@+id/today_qfriend"
                android:text="狮子座"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/today_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="今天是你沟通效率高涨的一天，利用你高效运作的大脑，不仅能促成很多人际关系，合作，也能让学业工作开展得更加顺利，在彼此交流意见的过程中，产生更多共识，有利合同的签订。但是事业的高压也容易让你产生逃避心态，挫败感让你缺乏闯一闯的勇气。" />
</LinearLayout>